Add logic to swtich between X and O for different players
Also add logic to not allow a spot that is marked to be remarked with opposing player piece
Add a board to the board class which is an array of arrays

--- a/style.css
+++ b/style.css
@@ -12,6 +12,11 @@
 
 .game-board td {
     border: 1px black solid;
+    text-align: center;
+    width: 33.3%;
+    height: 33.3%;
+    font-size: 4em;
+    font-weight: 900;
 }
 
 @media (min-width: 768px) {
