--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@
 
 .game-board td {
     border-radius: 15px;
-    background-color: rgb(218, 218, 218);
+    border: 1px rgb(185, 185, 185) solid;
+    background-color: rgb(225, 225, 225);
     text-align: center;
     width: 33.3%;
     height: 33.3%;
